# MATLAB

SLAM/: mapa.csv  mapaSLAM1.csv  mapaSLAM2.csv  mapaSLAM3.csv  slamFinal.m
SLAM/TOOLS/: EKF_prediction.m  EKF_update.m  JCBB.m  NN.m  SINGLES.m  add_features.m  arrow.m  compatibility_test.m  compute_compatibility.m  correlation.m  draw_compatibility.m  draw_correlation.m  draw_ellipse.m  draw_ground.m  draw_hypothesis.m  draw_map.m  draw_obs.m  draw_observations.m  draw_prediction.m  draw_reference.m  draw_tables.m  draw_trajectory.m  draw_vehicle.m  gaussian_noise.m  generate_experiment.m  get_observations.m  get_odometry.m  ground_solution.m  jacobian1.m  jacobian2.m  joint_mahalanobis2.m  jointly_compatible.m  mahalanobis.m  map_rows.m  move_vehicle.m  new_map.m  normalize.m  obs_rows.m  odometry.m  particles.m  (+12 more)
SLAM/functions/: CircleIntersect.m  FreeWay.m  ImprimeMapaObstaculos.m  InsideCircle.m  PixelPerimeter.m  Route.m  addRoute.m  blob_rectangles.m  borderClosed.m  borderLine.m  calcTurn.m  closeEnough.m  closedToSegment.m  directView.m  discardVisited.m  fillLine.m  getObstacles.m  getStepDistance.m  getTrajectory.m  insert_movs_360.m  load_map.m  navSampling.m  nearestPoint.m  planifica.m  pol2cart_off.m  posIdx.m  routeToEnd.m  sampling.m  selectCandidate.m  superficieRecorrida.m  veHaciaLaLuz.m  vectorRadians.m
planar IK/: IK.m  readme.md
planification/: planification.m  readme.md  viablepath.m
planification/master-ipr-master/: CMakeLists.txt  PITCHME.md  README.md
planification/master-ipr-master/cmake/template/: 2018_PTMRConfig.cmake.in
planification/master-ipr-master/doc/: master-ipr-install.md
planification/master-ipr-master/examples/algorithms/cpp/class/: CMakeLists.txt  main.cpp
planification/master-ipr-master/examples/cpp/: CMakeLists.txt  depthClient.cpp  robotClient.cpp
planification/master-ipr-master/examples/matlab/: depthClient.m  robotClient.m
planification/master-ipr-master/examples/python/: depthClient.py  robotClient.py
planification/master-ipr-master/examples/python/simple/: README.md  RobotPy.py  simple.py
planification/master-ipr-master/map1/openrave/: CMakeLists.txt  iprSim1  map1.env.xml
planification/master-ipr-master/map10/openrave/: CMakeLists.txt  iprSim10  map10.env.xml
planification/master-ipr-master/map11/openrave/: CMakeLists.txt  iprSim11  map11.env.xml
planification/master-ipr-master/map12/: map12.csv
planification/master-ipr-master/map12/openrave/: CMakeLists.txt  iprSim6  map6.env.xml
planification/master-ipr-master/map2/openrave/: CMakeLists.txt  iprSim2  map2.env.xml
planification/master-ipr-master/map3/openrave/: CMakeLists.txt  iprSim3  map3.env.xml
planification/master-ipr-master/map4/openrave/: CMakeLists.txt  iprSim4  map4.env.xml
planification/master-ipr-master/map5/openrave/: CMakeLists.txt  iprSim5  map5.env.xml
planification/master-ipr-master/map7/openrave/: CMakeLists.txt  iprSim7  map7.env.xml
planification/master-ipr-master/map8/openrave/: CMakeLists.txt  iprSim8  map8.env.xml
planification/master-ipr-master/map8/openrave/ecro/models/: kinect.wrl
planification/master-ipr-master/map9/openrave/: CMakeLists.txt  iprSim9  map9.env.xml
